2025-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.11  Stable version.
	* configure.ac: Bump version.
	* fread.c: Improve compatibility with makeindex.
	* styfile.c: Fix escaping of string parameters.
	Thanks to Yukimasa Morimi.
	https://github.com/texjporg/tex-jp-build/issues/173
	* tests/upmendex.test, tests/head1.ist,
	tests/tort{,W}.idx, tests/ok-tort{,2}.ind:
	Add tests for encap escape & heading_{pre,post}fix.
	* Makefile.am: Adjust.

2025-01-25  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2025.

2024-11-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.10  Stable version.
	* configure.ac: Bump version.
	* {mendex,var,exvar}.h, fread.c, fwrite.c, sort.c, styfile.c:
	Support for indices with four sublevels,
	conventionally two sublevels.
	Thanks to pull request by Sergei Golovan.
	https://github.com/t-tk/upmendex-package/pull/9
	* fread.c: Improve error message when reading index entries.
	https://github.com/t-tk/upmendex-package/issues/13
	* sort.c: Extend RULEBUFSIZE to adjust ICU 76.1.
	Revise to avoid compiler warnings.
	* convert.c: Tweak comment.
	* tests/{upmendex,pprec,icu}.test: Split test scripts.
	* tests/nest.test, tests/nested{,3}.{ist,idx,ind},
	tests/toodeep.idx: Add new tests for nested depth.
	* tests/upmendex.test, tests/tort{,W}.idx, tests/ok-tort.ind:
	Add new tests for error/warning.
	* Makefile.am: Adjust.

2024-07-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.09  Stable version.
	* configure.ac: Bump version.
	* fwrite.c:
	Improve heading of Ö,ö,Ő,ő,Ü,ü,Ű,ű in Hungarian.
	Thanks to @hair-splitter for the report.
	https://github.com/t-tk/upmendex-package/issues/10

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-05  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2024.

2023-12-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.08  Stable version.
	* configure.ac: Bump version.
	* sort.c: Warn if remaining buffer is small for custom collation rules