@@ -1,3 +1,11 @@
+2025-02-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* convert.c, kp.{c,h}, styfile.c:
+	Use kpse_find_file to find style files.
+	Thanks to Yukimasa Morimi.
+	* tests/upmendex.test: Add tests.
+	https://github.com/texjporg/tex-jp-build/issues/175
+
 2025-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version 1.11  Stable version.
